--- a/.circleci/images/3.4/Dockerfile
+++ b/.circleci/images/3.4/Dockerfile
@@ -1,6 +1,7 @@
 FROM haxe:3.4
 
-RUN apt-get install libgl1-mesa-dev libglu1-mesa-dev g++ g++-multilib gcc-multilib libasound2-dev libx11-dev libxext-dev libxi-dev libxrandr-dev libxinerama-dev
+RUN apt-get update
+RUN apt-get install -y libgl1-mesa-dev libglu1-mesa-dev g++ g++-multilib gcc-multilib libasound2-dev libx11-dev libxext-dev libxi-dev libxrandr-dev libxinerama-dev
 RUN haxelib install hxcpp
 RUN haxelib install format
 RUN haxelib install mcover
