--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,20 +10,20 @@ jobs:
      - checkout
      - run:
         name: Setup OpenFL dev directory
-        command: haxelib dev openfl ~/openfl
+        command: haxelib dev openfl .
      - run: if [[ $CIRCLE_BRANCH == 'master' ]]; then git clone -b master --single-branch --recursive https://github.com/openfl/lime ~/lime --depth 1 ; fi
      - run: if [[ $CIRCLE_BRANCH != 'master' ]]; then git clone -b develop --single-branch --recursive https://github.com/openfl/lime ~/lime --depth 1 ; fi
      - run: haxelib dev lime ~/lime
      - run: haxelib run lime rebuild tools -nocffi
      - run:
-         working_directory: ~/openfl/tests/unit
+         working_directory: tests/unit
          command: haxelib run munit gen
      - persist_to_workspace:
-         root: /
+         root: ~/
          paths:
-          - /usr/local/lib/haxe/lib/*/.dev
-          - ~/openfl
-          - ~/lime
+          - ../../usr/local/lib/haxe/lib/*/.dev
+          - openfl
+          - lime
   
   setup-3.4:
     docker:
@@ -33,20 +33,20 @@ jobs:
      - checkout
      - run:
         name: Setup OpenFL dev directory
-        command: haxelib dev openfl ~/openfl
+        command: haxelib dev openfl .
      - run: if [[ $CIRCLE_BRANCH == 'master' ]]; then git clone -b master --single-branch --recursive https://github.com/openfl/lime ~/lime --depth 1 ; fi
      - run: if [[ $CIRCLE_BRANCH != 'master' ]]; then git clone -b develop --single-branch --recursive https://github.com/openfl/lime ~/lime --depth 1 ; fi
      - run: haxelib dev lime ~/lime
      - run: haxelib run lime rebuild tools -nocffi
      - run:
-         working_directory: ~/openfl/tests/unit
+         working_directory: tests/unit
          command: haxelib run munit gen
      - persist_to_workspace:
-         root: /
+         root: ~/
          paths:
-          - /usr/local/lib/haxe/lib/*/.dev
-          - ~/openfl
-          - ~/lime
+          - ../../usr/local/lib/haxe/lib/*/.dev
+          - openfl
+          - lime
 
 
 
@@ -57,7 +57,7 @@ jobs:
     working_directory: ~/openfl/tests/unit
     steps:
      - attach_workspace:
-         at: /
+         at: ~/
      - run: haxelib run munit test -browser phantomjs -nocffi
   
   neko-3.2:
@@ -66,7 +66,7 @@ jobs:
     working_directory: ~/openfl/tests/unit
     steps:
      - attach_workspace:
-         at: /
+         at: ~/
      - run: haxelib run lime rebuild linux -release -64 -nocffi
      - run: haxelib run lime build neko -nocffi
      - run: haxelib run lime build neko -Ddisable-cffi -nocffi
@@ -77,7 +77,7 @@ jobs:
     working_directory: ~/openfl/tests/unit
     steps:
      - attach_workspace:
-         at: /
+         at: ~/
      - run: haxelib run lime rebuild linux -release -64 -nocffi
      - run: haxelib run lime test linux --window-hardware=false
   
@@ -87,7 +87,7 @@ jobs:
     working_directory: ~/openfl/tests/unit
     steps:
      - attach_workspace:
-         at: /
+         at: ~/
      - run: haxelib run munit test -as3 -norun -nocffi
   
   docs-3.2:
@@ -96,7 +96,7 @@ jobs:
     working_directory: ~/openfl/docs
     steps:
      - attach_workspace:
-         at: /
+         at: ~/
      - run: git clone https://github.com/openfl/dox ~/dox --depth 1
      - run: haxelib dev dox ~/dox
      - run: haxe build.hxml
@@ -110,7 +110,7 @@ jobs:
     working_directory: ~/openfl/tests/unit
     steps:
      - attach_workspace:
-         at: /
+         at: ~/
      - run: haxelib run munit test -browser phantomjs -nocffi
   
   neko-3.4:
@@ -119,7 +119,7 @@ jobs:
     working_directory: ~/openfl/tests/unit
     steps:
      - attach_workspace:
-         at: /
+         at: ~/
      - run: haxelib run lime rebuild linux -release -64 -nocffi
      - run: haxelib run lime build neko -nocffi
      - run: haxelib run lime build neko -Ddisable-cffi -nocffi
@@ -130,7 +130,7 @@ jobs:
     working_directory: ~/openfl/tests/unit
     steps:
      - attach_workspace:
-         at: /
+         at: ~/
      - run: haxelib run lime rebuild linux -release -64 -nocffi
      - run: haxelib run lime test linux --window-hardware=false
   
@@ -140,7 +140,7 @@ jobs:
     working_directory: ~/openfl/tests/unit
     steps:
      - attach_workspace:
-         at: /
+         at: ~/
      - run: haxelib run munit test -as3 -norun -nocffi
   
   docs-3.4:
@@ -149,7 +149,7 @@ jobs:
     working_directory: ~/openfl/docs
     steps:
      - attach_workspace:
-         at: /
+         at: ~/
      - run: git clone https://github.com/openfl/dox ~/dox --depth 1
      - run: haxelib dev dox ~/dox
      - run: haxe build.hxml
