Update CI script for HTML5

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -76,7 +76,7 @@ jobs:
          command: haxelib run lime build html5 -nocffi
      - run:
          name: Run Tests
-         command: haxelib run munit test -browser phantomjs -nocffi
+         command: haxelib run munit test -js -nocffi
   
   HTML5 (Haxe 3.4.x):
     docker:
@@ -90,7 +90,7 @@ jobs:
          command: haxelib run lime build html5 -nocffi
      - run:
          name: Run Tests
-         command: haxelib run munit test -browser phantomjs -nocffi
+         command: haxelib run munit test -js -nocffi
   
   
   Neko (Haxe 3.2.1):
