Add docker-build-dist, docker-build-lib

--- a/package.json
+++ b/package.json
@@ -48,7 +48,9 @@
     "test-es6": "npm run build-test-es6 && mocha-chrome test/es6/index.html --old-and-busted",
     "test-haxe": "npm run build-test-haxe && mocha-chrome test/haxe/index.html --old-and-busted",
     "test-typescript": "npm run build-test-typescript && mocha-chrome test/typescript/index.html --old-and-busted",
-    "docker-build": "cd scripts && node docker-run.js openfl/ci-openfl-js:0.0.2 \"npm run build; chmod -R 777 lib/_gen\"",
+    "docker-build": "cd scripts && node docker-run.js openfl/ci-openfl-js:0.0.2 \"npm run build; chmod -R 777 dist; chmod -R 777 lib/_gen\"",
+    "docker-build-dist": "cd scripts && node docker-run.js openfl/ci-openfl-js:0.0.2 \"npm run build-dist; chmod -R 777 dist\"",
+    "docker-build-lib": "cd scripts && node docker-run.js openfl/ci-openfl-js:0.0.2 \"npm run build-lib; chmod -R 777 lib/_gen\"",
     "docker-build-test-es5": "cd scripts && node docker-run.js openfl/ci-openfl-js:0.0.2 \"npm run build-test-es5 -s; chmod -R 777 test/es5\"",
     "docker-build-test-es6": "cd scripts && node docker-run.js openfl/ci-openfl-js:0.0.2 \"npm run build-test-es6 -s; chmod -R 777 test/es6\"",
     "docker-build-test-haxe": "cd scripts && node docker-run.js openfl/ci-openfl-js:0.0.2 \"npm run build-test-haxe -s; chmod -R 777 test/haxe\"",
