Switch to postinstall script for now, instead of napa

--- a/package.json
+++ b/package.json
@@ -60,8 +60,7 @@
     "docker-test-es6": "cd scripts && node docker-run.js openfl/ci-openfl-js:0.0.2 \"npm run test-es6 -s\"",
     "docker-test-haxe": "cd scripts && node docker-run.js openfl/ci-openfl-js:0.0.2 \"npm run test-haxe -s\"",
     "docker-test-typescript": "cd scripts && node docker-run.js openfl/ci-openfl-js:0.0.2 \"npm run test-typescript -s\"",
-    "install": "napa",
-    "prepare": "napa && npm run build"
+    "postinstall": "node scripts/postinstall.js"
   },
   "config": {
     "haxe": "3.4.4"
@@ -75,17 +74,10 @@
     "haxe": "^4.1.0",
     "mocha": "^4.0.1",
     "mocha-chrome": "^1.0.2",
-    "napa": "^3.0.0",
     "typescript": "^2.6.2",
     "uglifyjs-webpack-plugin": "^1.1.4",
     "webpack": "^3.10.0",
     "webpack-merge": "^4.1.1"
-  },
-  "napa": {
-    "hxgenjs": "kevinresol/hxgenjs",
-    "tink_macro": "haxetink/tink_macro#0.15.4",
-    "tink_core": "haxetink/tink_core#1.15.3",
-    "lime": "openfl/lime#develop"
   },
   "dependencies": {
     "howler": "^2.0.6",
